Fix different layout issues

--- a/assets/sass/components/_menu.scss
+++ b/assets/sass/components/_menu.scss
@@ -25,17 +25,17 @@
 
     .btn {
         color: $main-color-text;
+        padding-left: 0;
     }
 
     @media(max-width: 767px) {
         width: 100%;
         border-bottom: 0.15rem solid #ddd;
         border-left: none !important;
-        text-align: center;
-    }
-    @media(max-width: 767px){
+        justify-content: start;
         padding: 1rem;
     }
+    
 }
 
 .secondary-menu.collapse:not(.show) {
@@ -47,7 +47,7 @@
 
 .secondary-menu {
     height: 4.5rem;
-    box-shadow: 0 3px 5px 0 rgba(32, 33, 36, 0.18);
+    @include box-shadow( 0 3px 5px 0 rgba(32, 33, 36, 0.18));
     background-color: $bg-light;
 
     @media(max-width: 767px) {
@@ -77,24 +77,19 @@ span.menu-option-label {
 ul#right-options {
     @media(min-width: 768px)and(max-width:1199px) {
         background-color: #f7f7f7;
-        /* float: right; */
         position: absolute;
         right: 0;
-        box-shadow: 0 3px 5px 0 rgba(32, 33, 36, 0.18);
+        @include box-shadow( 0 3px 5px 0 rgba(32, 33, 36, 0.18));
         z-index: 999;
         top: 4.7rem;
-
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
-        padding-left: 0;
         margin-bottom: 0;
         list-style: none;
-        padding: 1rem 0;
+        padding: 1rem ;
 
     }
 }
@@ -129,6 +124,7 @@ ul#right-options {
             padding: 1rem 0;
             border-bottom: 0.15rem solid #ddd;
             border-left:none;
+            justify-content: start;
            
         }
         &:last-child{
