--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -19,4 +19,6 @@ footer {
 }
 .footer-logo{
     line-height: 4rem;
+    font-size: 2rem;
+    
 }
