--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -84,7 +84,7 @@ span.menu-option-label{
         min-width: 14rem;
         right: 0;
         position: absolute;
-        top: 4.65rem;
+        top: 4.25rem;
         z-index: 999;
         background-color: $secondary;
     }
