--- a/assets/sass/layout/_sidebar-nav.scss
+++ b/assets/sass/layout/_sidebar-nav.scss
@@ -134,30 +134,12 @@
     position: absolute;
     z-index: 9999;
     background-color: #f7f7f7;
-    box-shadow: 0 3px 5px 0 rgba(32, 33, 36, 0.18);
+    @include  box-shadow(0 3px 5px 0 rgba(32, 33, 36, 0.18));
     width: 100%;
-    top: 10rem;
+    top: 8.35rem;
   }
-  .navbar-collapse.collapsing {
-    @media(max-width: 767px){
-      height: auto;
-      -webkit-transition: left 0.3s ease;
-      -o-transition: left 0.3s ease;
-      -moz-transition: left 0.3s ease;
-      transition: left 0.3s ease;
-      left: -100%;
-    }
-   
-}
-.navbar-collapse.show {
-  @media(max-width: 767px){
-    left: 0;
-    -webkit-transition: left 0.3s ease-in;
-    -o-transition: left 0.3s ease-in;
-    -moz-transition: left 0.3s ease-in;
-    transition: left 0.3s ease-in;
-  }
-}
+
+
 }
 
 
